fix horizontal overscroll on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,11 +3,16 @@
 * {
   box-sizing: border-box;
   overscroll-behavior-x: contain;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
   overflow-x: hidden !important;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .app-container {
@@ -36,3 +41,10 @@ body {
   background-color: black;
 }
 /* -----Scroll Section----- */
+
+@media only screen and (max-width: 480px) {
+  body {
+    overflow-x: hidden;
+    position: relative;
+  }
+}
